5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1834_1278.log
== TEST (2019-07-02 15:26:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

tempo = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,10,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
distancia = o
cidadeA = int(input("cidade A: "))
cidadeB = int(input("cidade B: "))
while(cidadeB =! -1):
	distancia = tempo[(cidadeA//100)-1,(cidadeB//100)-1]+distancia
	cidadeA = cidadeB
	cidadeB = int(input("cidade B: "))
print(distancia)
-- ERROR:
File "XXXX", line 14
    while(cidadeB =! -1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:26:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

tempo = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,10,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
distancia = o
cidadeA = int(input("cidade A: "))
cidadeB = int(input("cidade B: "))
while(cidadeB != -1):
	distancia = tempo[(cidadeA//100)-1,(cidadeB//100)-1]+distancia
	cidadeA = cidadeB
	cidadeB = int(input("cidade B: "))
print(distancia)
-- EXECUTION TIME:
1.23868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 11, in <module>
    distancia = o
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

tempo = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,10,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
distancia = 0
cidadeA = int(input("cidade A: "))
cidadeB = int(input("cidade B: "))
while(cidadeB != -1):
	distancia = tempo[(cidadeA//100)-1,(cidadeB//100)-1]+distancia
	cidadeA = cidadeB
	cidadeB = int(input("cidade B: "))
print(distancia)
-- EXECUTION TIME:
1.22178
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
